Split the content

--- a/content/frontmatter.tex
+++ b/content/frontmatter.tex
@@ -1,28 +1,25 @@
-
-%\title{Breast lesion Segmentation in \acl*{us} images based on super-pixels and high-level descriptors} 
-\title{ An optimization approach to segment breast lesions in ultra-sound images using clinically validated visual cues }
-
-%>>>> The author is responsible for formatting the 
-%  author list and their institutions.  Use  \skiplinehalf 
-%  to separate author list from addresses and between each address.
-%  The correspondence between each author and his/her address
-%  can be indicated with a superscript in italics, 
-%  which is easily obtained with \supit{}.
-
-\author{
-  Anonymous
-%  Joan~Massich\supit{a} and
-%        Guillaume~Lema\^{i}tre\supit{a,b} and
-%        Joan~Mart\'{i}\supit{b} and
-%        Fabrice~M\'{eriaudeau}\supit{a}
-%  \skiplinehalf
-%  \supit{a}{\scriptsize LE2I-UMR CNRS 6306, Universit\'{e} de Bourgogne, 12 rue de la Fonderie, 71200 Le Creusot, France;} \\
-%  \supit{b}{\scriptsize ViCOROB, Universitat de Girona, Campus Montilivi, Edifici P4, 17071 Girona, Spain}
-}
-
-%>>>> Further information about the authors, other than their 
-%  institution and addresses, should be included as a footnote, 
-%  which is facilitated by the \authorinfo{} command.
-
-%\authorinfo{This work was partially supported by the Regional Council of Burgundy.\\Further author information, send correspondence to joan.massich@u-bourgogne.fr}
-%%>>>> when using amstex, you need to use @@ instead of @
+\title{Hamiltonian Mechanics unter besonderer Ber\"ucksichtigung der
+h\"ohreren Lehranstalten}
+%
+\titlerunning{Hamiltonian Mechanics}  % abbreviated title (for running head)
+%                                     also used for the TOC unless
+%                                     \toctitle is used
+%
+\author{Ivar Ekeland\inst{1} \and Roger Temam\inst{2}
+Jeffrey Dean \and David Grove \and Craig Chambers \and Kim~B.~Bruce \and
+Elsa Bertino}
+%
+\authorrunning{Ivar Ekeland et al.} % abbreviated author list (for running head)
+%
+%%%% list of authors for the TOC (use if author list has to be modified)
+\tocauthor{Ivar Ekeland, Roger Temam, Jeffrey Dean, David Grove,
+Craig Chambers, Kim B. Bruce, and Elisa Bertino}
+%
+\institute{Princeton University, Princeton NJ 08544, USA,\\
+\email{I.Ekeland@princeton.edu},\\ WWW home page:
+\texttt{http://users/\homedir iekeland/web/welcome.html}
+\and
+Universit\'{e} de Paris-Sud,
+Laboratoire d'Analyse Num\'{e}rique, B\^{a}timent 425,\\
+F-91405 Orsay Cedex, France}
+\addtocmark{Hamiltonian Mechanics} % additional mark in the TOC
