Now does not compile again

--- a/content/frontmatter.tex
+++ b/content/frontmatter.tex
@@ -1,25 +1,19 @@
-\title{Hamiltonian Mechanics unter besonderer Ber\"ucksichtigung der
-h\"ohreren Lehranstalten}
-%
-\titlerunning{Hamiltonian Mechanics}  % abbreviated title (for running head)
+\title{ An optimization approach to segment breast lesions in ultra-sound images using clinically validated visual cues }
+%\titlerunning{Optimization approach to BUS lesion segmentation}  % abbreviated title (for running head)
 %                                     also used for the TOC unless
 %                                     \toctitle is used
-%
-\author{Ivar Ekeland\inst{1} \and Roger Temam\inst{2}
-Jeffrey Dean \and David Grove \and Craig Chambers \and Kim~B.~Bruce \and
-Elsa Bertino}
-%
-\authorrunning{Ivar Ekeland et al.} % abbreviated author list (for running head)
-%
-%%%% list of authors for the TOC (use if author list has to be modified)
-\tocauthor{Ivar Ekeland, Roger Temam, Jeffrey Dean, David Grove,
-Craig Chambers, Kim B. Bruce, and Elisa Bertino}
-%
-\institute{Princeton University, Princeton NJ 08544, USA,\\
-\email{I.Ekeland@princeton.edu},\\ WWW home page:
-\texttt{http://users/\homedir iekeland/web/welcome.html}
-\and
-Universit\'{e} de Paris-Sud,
-Laboratoire d'Analyse Num\'{e}rique, B\^{a}timent 425,\\
-F-91405 Orsay Cedex, France}
-\addtocmark{Hamiltonian Mechanics} % additional mark in the TOC
+
+\author{
+  Joan Massich\inst{1} \and
+  Guillaume Lema\^{i}tre\inst{1,2} \and
+  Joan Mart\'{i}\inst{2} \and
+  Fabrice M\'{e}riaudeau\inst{1}
+}
+\authorrunning{Joan Massich al.} % abbreviated author list (for running head)
+%\tocauthor{ Joan Massich \and Guillaume Lema\^{i}tre \and Joan Mart\'{i} 
+            \and Fabrice M\'{e}riaudeau }
+
+\institute{LE2I-UMR CNRS 6306, Universit\'{e} de Bourgogne, 12 rue de la Fonderie, 71200 Le Creusot, France;
+\email{joan.massich@u-bourgogne.fr}
+\and ViCOROB, Universitat de Girona, Campus Montilivi, Edifici P4, 17071 Girona, Spain}
+%\thanks{This work was partially supported by the Regional Council of Burgundyand by the Spanish Boverment MEC grant nb.TIN2012-3171-C02-01}
