It seems to compile

--- a/content/frontmatter.tex
+++ b/content/frontmatter.tex
@@ -1,19 +1,23 @@
 \title{ An optimization approach to segment breast lesions in ultra-sound images using clinically validated visual cues }
-%\titlerunning{Optimization approach to BUS lesion segmentation}  % abbreviated title (for running head)
+\titlerunning{Optimization approach to BUS lesion segmentation}  % abbreviated title (for running head)
 %                                     also used for the TOC unless
 %                                     \toctitle is used
-
+%
 \author{
-  Joan Massich\inst{1} \and
-  Guillaume Lema\^{i}tre\inst{1,2} \and
-  Joan Mart\'{i}\inst{2} \and
-  Fabrice M\'{e}riaudeau\inst{1}
+  Joan Massich\inst{1} and
+  Guillaume Lema\^{i}tre\inst{1,2} and
+  Joan Mart\'{i}\inst{2} and
+  Fabrice M\'{eriaudeau}\inst{1}
 }
-\authorrunning{Joan Massich al.} % abbreviated author list (for running head)
-%\tocauthor{ Joan Massich \and Guillaume Lema\^{i}tre \and Joan Mart\'{i} 
-            \and Fabrice M\'{e}riaudeau }
-
-\institute{LE2I-UMR CNRS 6306, Universit\'{e} de Bourgogne, 12 rue de la Fonderie, 71200 Le Creusot, France;
+%
+\authorrunning{Joan Massich et al.} % abbreviated author list (for running head)
+%
+%
+\institute{LE2I-UMR CNRS 6306, Universit\'{e} de Bourgogne, 12 rue de la Fonderie, \\
+  71200 Le Creusot, France;\\
 \email{joan.massich@u-bourgogne.fr}
-\and ViCOROB, Universitat de Girona, Campus Montilivi, Edifici P4, 17071 Girona, Spain}
-%\thanks{This work was partially supported by the Regional Council of Burgundyand by the Spanish Boverment MEC grant nb.TIN2012-3171-C02-01}
+\and
+ViCOROB, Universitat de Girona, 
+Campus Montilivi, Edifici P4, \\17071 Girona, Spain
+}
+%\addtocmark{Hamiltonian Mechanics} % additional mark in the TOC
