Anymized names, the projects still are missing

--- a/content/frontmatter.tex
+++ b/content/frontmatter.tex
@@ -4,20 +4,20 @@
 %                                     \toctitle is used
 %
 \author{
-  Joan Massich\inst{1} and
-  Guillaume Lema\^{i}tre\inst{1,2} and
-  Joan Mart\'{i}\inst{2} and
-  Fabrice M\'{eriaudeau}\inst{1}
+  **** *******\inst{1} and
+  ********* ********\inst{1,2} and
+  **** *****\inst{2} and
+  ******* **********\inst{1}
 }
 %
-\authorrunning{Joan Massich et al.} % abbreviated author list (for running head)
+\authorrunning{**** ******* et al.} % abbreviated author list (for running head)
 %
 %
-\institute{LE2I-UMR CNRS 6306, Universit\'{e} de Bourgogne, 12 rue de la Fonderie, \\
-  71200 Le Creusot, France;\\
-\email{joan.massich@u-bourgogne.fr}
+\institute{******************, ********** ** *********, ** *** ** ** ********, \\
+******* ** *******, ******;\\
+\email{****.*******@***********.**}
 \and
-ViCOROB, Universitat de Girona, 
-Campus Montilivi, Edifici P4, \\17071 Girona, Spain
+*******, *********** ** ******, 
+****** *********, ******* **, ******* ******, *****
 }
 %\addtocmark{Hamiltonian Mechanics} % additional mark in the TOC
