Added the DAMN Thanks

--- a/content/frontmatter.tex
+++ b/content/frontmatter.tex
@@ -4,10 +4,12 @@
 %                                     \toctitle is used
 %
 \author{
-  Joan Massich\inst{1} and
-  Guillaume Lema\^{i}tre\inst{1,2} and
-  Joan Mart\'{i}\inst{2} and
-  Fabrice M\'{eriaudeau}\inst{1}
+  Joan Massich\thanks{This work was partially supported by the Regional 
+                      Council of Burgundyand by the Spanish Goverment MEC 
+                      grant nb.TIN2012-3171-C02-01}\inst{1} 
+  \and Guillaume Lema\^{i}tre\inst{1,2}
+  \and Joan Mart\'{i}\inst{2}
+  \and Fabrice M\'{eriaudeau}\inst{1}
 }
 %
 \authorrunning{Joan Massich et al.} % abbreviated author list (for running head)
