Added annonymized ticks

--- a/master.tex
+++ b/master.tex
@@ -15,16 +15,11 @@
 
 \begin{abstract}
 \acresetall  % reset the acronyms from the title (if any)
-  Breast cancer is the second most common cancer and the leading cause of cancer death among women.
-  Medical imaging has become an indispensable tool for its diagnosis and follow up.
-  During the last decade, the medical community has promoted to incorporate \ac{us} screening as part of the standard routine.
-  The main reason for using \ac{us} imaging is its capability to differentiate benign from malignant masses, when compared to other imaging techniques.
-  The increasing usage of \ac{us} imaging encourages the development of \ac{cad} systems applied to \ac{bus} images.  
-  However accurate delineations of the lesions and structures of the breast are essential for \ac{cad} systems in order to extract information needed to perform diagnosis.
+Since breast cancer remains the leading cause of cancer death among female population world-wide, any attempt to create tools for assisting radiologists during the process of diagnosing is necessary.
+However, most of the technology developed in the imaging laboratories are expelled from this process by clinicians only because these technologies are not founded on the already existing clinical findings and procedures.
+This article renders accurate delineation of the breast structures and lesions as the missing step for developing \ac{cad} systems that take advantage of the clinical findings already adopted by the clinicians.
 
-  This article proposes a highly modular and flexible framework for segmenting lesions and tissues present in \ac{bus} images.
-  The proposal takes advantage of optimization strategies using super-pixels and high-level descriptors, which are analogous to the visual cues used by radiologists.
-  Qualitative and quantitative results are provided stating a performance within the range of the state-of-the-art.
+Therefore, a highly modular and flexible framework for segmenting breast tissues and lesions present in \ac{bus} images using optimization strategies and high-level descriptors designed analogously to the visual cues used by radiologists is here proposed.
 \end{abstract}
 
 \keywords{Breast Ultra-Sound, BI-RADS lexicon, Optimization based Segmentation, Machine-Learning based Segmentation, Graph-Cuts}
