--- a/master.tex
+++ b/master.tex
@@ -27,7 +27,8 @@ Therefore, a highly modular and flexible framework for segmenting breast tissues
 %% Incldue the content without .tex extension
 \acresetall  % reset the acronyms from the abstract
 \include*{content/intro/intro}          % the file wihtout .tex
-\include*{content/method/method}        
+\include*{content/method/method} 
+\include*{content/method/applied}       
 %\include*{content/features/features}    
 \include*{content/results/results}
 
