--- a/content/results/figures/survey_table.tex
+++ b/content/results/figures/survey_table.tex
@@ -32,23 +32,23 @@
 
 \centering
 \begin{tabular}{lcccccccccccccccc}
-  Method Id\textsuperscript{[ref]}:
-              &a\cite{Liu:2010p14328}
-              &b\cite{Gao:2012p14336}
-              &c\cite{AlemanFlores:2007p14310}
-              &d\cite{Huang:2012p14313}
-              &e\cite{Madabhushi:2003p6036}
-              &f\cite{hao2012combining}
-              &g\cite{Zhang:2010p14317}
-              &h\cite{Xiao:2002p5639}
-              &i\cite{massich2010lesion}
-              &j\cite{Shan:2012p14347}
-              &k\cite{Yeh:2009p11985}
-              &l\cite{Horsch:2001p6028}
-              &m\cite{Gomez:2010p14339}
-              &n\cite{Huang:2005p11636}
-              &o\cite{Huang:2007p6100}
-              &p\cite{Cui:2009p14325}\\
+  Method Id:%\textsuperscript{[ref]}:
+              &a%\cite{Liu:2010p14328}
+              &b%\cite{Gao:2012p14336}
+              &c%\cite{AlemanFlores:2007p14310}
+              &d%\cite{Huang:2012p14313}
+              &e%\cite{Madabhushi:2003p6036}
+              &f%\cite{hao2012combining}
+              &g%\cite{Zhang:2010p14317}
+              &h%\cite{Xiao:2002p5639}
+              &i%\cite{massich2010lesion}
+              &j%\cite{Shan:2012p14347}
+              &k%\cite{Yeh:2009p11985}
+              &l%\cite{Horsch:2001p6028}
+              &m%\cite{Gomez:2010p14339}
+              &n%\cite{Huang:2005p11636}
+              &o%\cite{Huang:2007p6100}
+              &p%\cite{Cui:2009p14325}\\
   \\\hline \\
   Dataset size:     & 76   & 20   & 32   & 20   & 42   & 480  & 347    & 352  & 25
                     & 120  & 6    & 400  & 50   & 20   & 118  & 488 \\
